--- a/css/edit.css
+++ b/css/edit.css
@@ -596,6 +596,7 @@ textarea:focus,input:focus {
 .dialog-box .box-inner {
 	position:relative;
 	padding:30px;
+    padding-top:130px;
 }
 .dialog-box .pbt {
 	min-height:170px;
